<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.binary.AlphaToBinaryActivity"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/rosetta_stone"
    >

<EditText
    android:id="@+id/userInput"
    android:layout_width="328dp"
    android:layout_height="150dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="70dp"
    android:background="#ccc9f6f0"
    android:ems="10"
    android:hint="@string/text_to_convert"
    android:textAlignment="center"
    android:textSize="20sp" />

<TextView
    android:id="@+id/translatedText"
    android:layout_width="328dp"
    android:layout_height="150dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="230dp"
    android:background="#ccc9f6f0"
    android:ems="10"
    android:hint="@string/converted_message"
    android:textAlignment="center"
    android:textSize="24sp"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="184dp" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="400dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/translateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#53fffff0"
        android:text="@string/convert_button_long"
        android:textColor="#64c9f6"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="434dp" />

</LinearLayout>



</RelativeLayout>
